--- a/scrawny/src/components/ModalStartPage/modal-start-page.css
+++ b/scrawny/src/components/ModalStartPage/modal-start-page.css
@@ -25,7 +25,7 @@ form > div {
   font-size: 1.2rem;
   font-weight: 700;
 }
-form input {
+.start-form input {
   max-width: 70px;
   padding: 5px;
   box-shadow: 2px 2px 3px #000;
