finish. deploy to surge

--- a/the_wenue/src/resources/styles.css
+++ b/the_wenue/src/resources/styles.css
@@ -53,7 +53,9 @@ header .header_logo_venue {
 header .header_logo_title {
     text-transform: uppercase;
 }
-
+.trans{
+    color: transparent;
+}
 /*====================
         FOOTER
 ======================*/
