--- a/manchester_city/src/Resources/css/app.css
+++ b/manchester_city/src/Resources/css/app.css
@@ -420,8 +420,7 @@ footer .footer_discl {
 }
 .player_card_wrapper .player_card_thmb {
     border: 1px solid #eeeeee;
-    width:100%;
-    height:250px;
+    width:100%; 
     background-repeat: no-repeat !important;
     background-position: center !important;
     background-size: contain !important;
@@ -681,4 +680,9 @@ footer .footer_discl {
     color: #d5ebfe;
     text-align: center;
     margin-top: 200px;
+}
+/* re */
+.player_image{
+    display: block;
+    margin: 0 auto;
 }
